--- a/intro.html
+++ b/intro.html
@@ -137,12 +137,12 @@
             </tr>
           </tbody>
         </table>
-        <div class="notice-btn" onclick="location.href='board_list?param=1'">
+<!--        <div class="notice-btn" onclick="location.href='board_list?param=1'">
           더보기<i class="fas fa-plus"></i>
-        </div>
+        </div> -->
       </div>
 
-      일정
+      <!-- 일정 -->
       <div class="main-section" style="margin-top: 25px">
         <h4 style="font-size: 1.05rem">총동창회 / 게시판</h4>
         <table class="notice-table">
@@ -182,9 +182,9 @@
             </tr>
           </tbody>
         </table>
-        <div class="notice-btn" onclick="location.href=''">
+<!--        <div class="notice-btn" onclick="location.href=''">
           더보기<i class="fas fa-plus"></i>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
